--- a/src/components/SectionHeader.css
+++ b/src/components/SectionHeader.css
@@ -2,6 +2,7 @@
     text-align: center;
     padding: 0.5em;
     color:var(--main-text-color);
+    margin-top:7em;
     font-size: 4em;
     text-shadow: 3px 3px 6px black;
 }
